applications/mcp-gateway/02-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mcp-gateway
  namespace: gateway-system
spec:
  gatewayClassName: <GATEWAY_CLASS>
  listeners:
    - name: mcp
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps
      hostname: "*.mcp.local"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
